# waveeffect

./: .gitignore  CMakeLists.txt  README.MD  flake.nix  meson.build
include/RGBLib/devices/: device.hpp  keyboard.hpp  mouse.hpp
include/RGBLib/devices/Keychron/: KeychronV6.hpp
include/RGBLib/devices/SteelSeries/: Rival600.hpp
include/RGBLib/util/: bytes.hpp  hsv.hpp  rgb.hpp
src/: main.cpp
src/include/: virt_utils.hpp  wave.hpp
